Style Guide: header `z-index` fix

--- a/assets/less/style-guide/layout.less
+++ b/assets/less/style-guide/layout.less
@@ -45,7 +45,7 @@
         padding-top: 1em;
         position: fixed;
         top: 0;
-        z-index: 2;
+        z-index: 100;
     }
 
     /* Home Icon */
